Closed Bug 405094 Opened 18 years ago Closed 18 years ago

Tooltip doesn't disappear anymore when hovering over it

Categories

(Core :: XUL, defect, P3)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: ginnchen+exoracle)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files, 1 obsolete file)

Attached file testcase
See testcase, to reproduce: - Hover over the green div. - Hover over the tooltip that has appeared Expected result: Tooltip should disappear when hovering over the tooltip. Actual result: Tooltip doesn't disappear anymore. This regressed between Nov 15 22:20 and Nov 16 01:05 (thanks to hourly builds): http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1195192920&maxdate=1195201859 So this is a regression from bug 396869.
Flags: blocking1.9?
The call to NotifyMouseOut is from NotifyMouseOver. So the checking of spurious event is fooled.
Attached patch patch (obsolete) — Splinter Review
Thanks for catching this!
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #290185 - Flags: superreview?(roc)
Attachment #290185 - Flags: review?(roc)
Attachment #290185 - Flags: superreview?(roc)
Attachment #290185 - Flags: superreview+
Attachment #290185 - Flags: review?(roc)
Attachment #290185 - Flags: review+
Attachment #290185 - Flags: approval1.9?
Attached patch patch v2Splinter Review
roc, I've a concern about the kidESM->NotifyMouseOut, the kidESM may have another mLastMouseOverFrame which doesn't have the same top widget with aEvent->widget. It could be a problem, although I don't have a testcase to prove it. I think maybe we should move the checking outside NotifyMouseOut(). Do you think it is better? BTW: I cleaned extra whitespaces I introduced to nsContentUtils.cpp in this patch.
Attachment #290502 - Flags: review?(roc)
Attachment #290502 - Flags: approval1.9?
Attachment #290185 - Attachment is obsolete: true
Attachment #290185 - Flags: approval1.9?
Comment on attachment 290502 [details] [diff] [review] patch v2 a=beltzner for drivers (does this fix the orphan tooltip on mac thing as well?)
Attachment #290502 - Flags: approval1.9? → approval1.9+
Flags: blocking1.9? → blocking1.9+
Priority: -- → P3
Ginn, can you commit this, please?
Committed. This patch is to fix a regression. I know nothing about orphan tooltip.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007120405 Minefield/3.0b2pre
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: