Bug 405094 Tooltip doesn't disappear anymore when hovering over it r+sr=roc a=beltzner