content/base/src/nsContentUtils.cpp
@@ -3726,13 +3726,13 @@ nsContentUtils::GetTopLevelWidget(nsIWidget* aWidget)
 {
   if (!aWidget) {
     return nsnull;
-  }    
+  }
 
   nsIWidget* currWidget = aWidget;
   nsIWidget* parentWidget;
   while ((parentWidget = currWidget->GetParent()) != nsnull) {
     currWidget = parentWidget;
-  }    
+  }
   return currWidget;
 }
 
