content/events/src/nsEventStateManager.cpp
@@ -2980,13 +2980,6 @@ nsEventStateManager::NotifyMouseOut(nsGUIEvent* aEvent, nsIContent* aMovingInto)
     return;
 
   if (mLastMouseOverFrame) {
-    if (nsContentUtils::GetTopLevelWidget(aEvent->widget) !=
-        nsContentUtils::GetTopLevelWidget(mLastMouseOverFrame->GetWindow())) {
-      // the MouseOut event widget doesn't have same top widget with
-      // mLastMouseOverFrame, it's a spurious event for mLastMouseOverFrame
-      return;
-    }
-
     // if the frame is associated with a subdocument,
     // tell the subdocument that we're moving out of it
     nsIFrameFrame* subdocFrame;
@@ -3123,6 +3116,15 @@ nsEventStateManager::GenerateMouseEnterExit(nsGUIEvent* aEvent)
     {
       // This is actually the window mouse exit event. We're not moving
       // into any new element.
+
+      if (mLastMouseOverFrame &&
+          nsContentUtils::GetTopLevelWidget(aEvent->widget) !=
+          nsContentUtils::GetTopLevelWidget(mLastMouseOverFrame->GetWindow())) {
+        // the MouseOut event widget doesn't have same top widget with
+        // mLastMouseOverFrame, it's a spurious event for mLastMouseOverFrame
+        break;
+      }
+
       NotifyMouseOut(aEvent, nsnull);
     }
     break;
